--- a/0315/sticker.tex
+++ b/0315/sticker.tex
@@ -1,8 +1,8 @@
 % common arguments
-\newcommand{\coursenum}[0]{CSCI 0390}%
-\newcommand{\coursetitletop}[0]{Spatial}%
-\newcommand{\coursetitlebottom}[0]{ABM}%
-\newcommand{\bordercolor}[0]{345BAB}%
+\newcommand{\coursenum}[0]{CSCI 0315}%
+\newcommand{\coursetitletop}[0]{Systems}%
+\newcommand{\coursetitlebottom}[0]{Programming}%
+\newcommand{\bordercolor}[0]{044C94}%
 \newcommand{\backgroundcolor}[0]{white}%
 
 
@@ -23,9 +23,9 @@
   \newdimen\R
   \R=1in
 
-  \node[]             at   (0.0, 0)     {\includegraphics[height=0.8 in]{landmass.png}};
+  \node[]             at   (0.0, 0.1)     {\includegraphics[height=0.8 in]{fish.png}};
   \node[align=center] at  (90:0.52in) {\Large \ttfamily \bfseries \coursenum};
-  \node[align=center] at (270: 0.58 in) {\large \ttfamily \coursetitletop \\ \large \ttfamily \coursetitlebottom};
+  \node[align=center] at (270: 0.5 in) {\large \ttfamily \coursetitletop \\ \large \ttfamily \coursetitlebottom};
   
   \draw[rounded corners=0.3mm,line width=1.3mm,color=border_color]
     (30:\R)--(90:\R)--(150:\R)--(210:\R)--(270:\R)--(330:\R)--cycle;
