--- a/0390/sticker.tex
+++ b/0390/sticker.tex
@@ -23,7 +23,7 @@
   \newdimen\R
   \R=1in
 
-  \node[]             at   (0.0, 0)     {\includegraphics[height=0.8 in]{landmass.png}};
+  \node[]             at   (0.0, 0)     {\includegraphics[height=0.8 in]{landmass-2.png}};
   \node[align=center] at  (90:0.52in) {\Large \ttfamily \bfseries \coursenum};
   \node[align=center] at (270: 0.58 in) {\large \ttfamily \coursetitletop \\ \large \ttfamily \coursetitlebottom};
   
