update border for 702

--- a/0702/sticker.tex
+++ b/0702/sticker.tex
@@ -2,7 +2,7 @@
 \newcommand{\coursenum}[0]{CSCI 0702}%
 \newcommand{\coursetitletop}[0]{Senior Thesis}%
 \newcommand{\coursetitlebottom}[0]{}%
-\newcommand{\bordercolor}[0]{873E23}%
+\newcommand{\bordercolor}[0]{37AADB}%
 \newcommand{\backgroundcolor}[0]{white}%
 
 
