--- a/0452/sticker.tex
+++ b/0452/sticker.tex
@@ -2,7 +2,7 @@
 \newcommand{\coursenum}[0]{CSCI 0452}%
 \newcommand{\coursetitletop}[0]{Image}%
 \newcommand{\coursetitlebottom}[0]{Processing}%
-\newcommand{\bordercolor}[0]{5768D6}%
+\newcommand{\bordercolor}[0]{7905FA}%
 \newcommand{\backgroundcolor}[0]{white}%
 
 
