--- a/0202/sticker.tex
+++ b/0202/sticker.tex
@@ -1,8 +1,8 @@
 % common arguments
-\newcommand{\coursenum}[0]{CSCI 0201}%
-\newcommand{\coursetitletop}[0]{Data}%
-\newcommand{\coursetitlebottom}[0]{Structures}%
-\newcommand{\bordercolor}[0]{579659}%
+\newcommand{\coursenum}[0]{CSCI 0202}%
+\newcommand{\coursetitletop}[0]{Computer}%
+\newcommand{\coursetitlebottom}[0]{Architecture}%
+\newcommand{\bordercolor}[0]{2827FF}%
 \newcommand{\backgroundcolor}[0]{FFFFFF}%
 
 
@@ -27,9 +27,9 @@
   \fill [opacity=1,background_color]
   (30:\R)--(90:\R)--(150:\R)--(210:\R)--(270:\R)--(330:\R)--cycle;
 
-  \node[]             at   (0.0, 0)     {\includegraphics[height=0.7 in]{node-3.png}};
+  \node[]             at   (0.0, .1)     {\includegraphics[height=0.6 in]{half-adder.png}};
   \node[align=center] at  (90:0.52in) {\Large \ttfamily \bfseries \coursenum};
-  \node[align=center] at (270: 0.53 in) {\large \ttfamily \coursetitletop \\ \large \ttfamily \coursetitlebottom};
+  \node[align=center] at (270: 0.5 in) {\large \ttfamily \coursetitletop \\ \large \ttfamily \coursetitlebottom};
   
   \draw[rounded corners=0.3mm,line width=1.3mm,color=border_color]
     (30:\R)--(90:\R)--(150:\R)--(210:\R)--(270:\R)--(330:\R)--cycle;
