add new ca/grader/146/301/302 stickers

--- a/0301/sticker.tex
+++ b/0301/sticker.tex
@@ -2,8 +2,8 @@
 \newcommand{\coursenum}[0]{CSCI 0301}%
 \newcommand{\coursetitletop}[0]{Theory of}%
 \newcommand{\coursetitlebottom}[0]{Computation}%
-\newcommand{\bordercolor}[0]{9FC9EB}%
-\newcommand{\backgroundcolor}[0]{F8F6E9}%
+\newcommand{\bordercolor}[0]{F3A712}%
+\newcommand{\backgroundcolor}[0]{ffffff}%
 
 
 \documentclass{standalone}
@@ -27,7 +27,7 @@
   \fill [opacity=1,background_color]
   (30:\R)--(90:\R)--(150:\R)--(210:\R)--(270:\R)--(330:\R)--cycle;
 
-  \node[]             at   (0.0, 0)     {\includegraphics[height=0.8 in]{puppy.jpg}};
+  \node[]             at   (0.0, 0)     {\includegraphics[height=0.8 in]{turing.png}};
   \node[align=center] at  (90:0.52in) {\Large \ttfamily \bfseries \coursenum};
   \node[align=center] at (270: 0.53 in) {\large \ttfamily \coursetitletop \\ \large \ttfamily \coursetitlebottom};
   
