--- a/0302/sticker.tex
+++ b/0302/sticker.tex
@@ -27,7 +27,7 @@
   \fill [opacity=1,background_color]
   (30:\R)--(90:\R)--(150:\R)--(210:\R)--(270:\R)--(330:\R)--cycle;
  
-  \node[]             at   (0.0, .05)     {\includegraphics[height=0.8 in]{knapsack.jpg}};
+  \node[]             at   (0.0, .05)     {\includegraphics[height=0.8 in]{prim_or_kruskal.jpg}};
   \node[align=center] at  (90:0.52in) {\Large \ttfamily \bfseries \coursenum};
   \node[align=center] at (270: 0.57 in) {\large \ttfamily \coursetitletop \\ \large \ttfamily \coursetitlebottom};
   
